--- a/sass/components/navigation/_posts-navigation.scss
+++ b/sass/components/navigation/_posts-navigation.scss
@@ -1,6 +1,7 @@
 .comment-navigation,
 .posts-navigation,
 .post-navigation {
+	background-color: $color__white;
 	position: relative;
 	clear: both;
 	margin: 0 0 $gutter__width;
