--- a/sass/components/site/primary/_comments.scss
+++ b/sass/components/site/primary/_comments.scss
@@ -57,7 +57,8 @@
 			margin-right: 1em;
 			display: block;
 			vertical-align: top;
-			border-radius: 64px;
+			width: 48px;
+			border-radius: 48px;
 		}
 		.comment-respond {
 			padding-bottom: 1.5rem;
