--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Color
 $color__background-body: #eceff1;
-$color__background-screen: #f1f1f1;
+$color__background-screen: #ff5722;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
 $color__background-pre: #eee;
