--- a/sass/base/modules/_accessibility.scss
+++ b/sass/base/modules/_accessibility.scss
@@ -1,38 +1,38 @@
 /* Text meant only for screen readers. */
 .screen-reader-text {
-	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
-	clip-path: inset(50%);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
 	position: absolute !important;
+	height: 1px;
 	width: 1px;
+	overflow: hidden;
 	word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
 
 	&:focus {
 		background-color: $color__background-screen;
-		border-radius: 3px;
-		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 		clip: auto !important;
-		clip-path: none;
-		color: $color__text-screen;
+		color: #fff;
 		display: block;
 		@include font-size(0.875);
 		font-weight: bold;
 		height: auto;
-		left: 5px;
+		left: .5rem;
 		line-height: normal;
 		padding: 15px 23px 14px;
 		text-decoration: none;
-		top: 5px;
+		top: .5rem;
 		width: auto;
 		z-index: 100000; /* Above WP toolbar. */
+		box-shadow: 0 8px 32px  rgba(0, 0, 0, 0.25);
 	}
 }
 
 /* Do not show the outline on the skip link target. */
-#content[tabindex="-1"]:focus {
+#page[tabindex="-1"]:focus,
+#site-navigation[tabindex="-1"]:focus,
+#main[tabindex="-1"]:focus,
+#content[tabindex="-1"]:focus,
+#secondary[tabindex="-1"]:focus,
+.entry[tabindex="-1"]:focus,
+#quick-view-container[tabindex="-1"]:focus {
 	outline: 0;
 }
