--- a/sass/base/modules/_alignments.scss
+++ b/sass/base/modules/_alignments.scss
@@ -1,16 +1,22 @@
-.alignleft {
-	display: inline;
-	float: left;
-	margin-right: 1.5em;
-}
-
-.alignright {
-	display: inline;
-	float: right;
-	margin-left: 1.5em;
-}
-
+.alignleft,
+.alignright
 .aligncenter {
 	clear: both;
 	@include center-block;
+}
+
+@include respond-to( small ){
+	.alignleft,
+	.alignright {
+		clear: none;
+		display: inline;
+	}
+	.alignleft {
+		float: left;
+		margin-right: 1.5em;
+	}
+	.alignright {
+		float: right;
+		margin-left: 1.5em;
+	}
 }
