--- a/sass/components/media/_captions.scss
+++ b/sass/components/media/_captions.scss
@@ -1,16 +1,30 @@
 .wp-caption {
-	margin-bottom: 1.5em;
+	background-color: rgba( 255,255,255,.5 );
+	border: 1px solid $color__alpha-dark;
+	padding: .5rem;
+	margin-bottom: 1.5rem;
 	max-width: 100%;
+	overflow: hidden;
+	border-radius: .25rem;
 
 	img[class*="wp-image-"] {
 		@include center-block;
 	}
 
-	.wp-caption-text {
-		margin: 0.8075em 0;
+	> a {
+		display: block;
+		img {
+			vertical-align: middle;
+		}
+		&:hover img,
+		&:focus img {
+			opacity: 0.5;
+		}
 	}
 }
 
 .wp-caption-text {
 	text-align: center;
+	@include font-size(0.875);
+	padding: 1rem 1rem .5rem;
 }
