--- a/sass/plugins/woocommerce/_widgets.scss
+++ b/sass/plugins/woocommerce/_widgets.scss
@@ -229,6 +229,8 @@ a.wcppec-cart-widget-button {
 	.select2-container--default .select2-selection--multiple {
 		border-top-left-radius: .25rem!important;
 		border-top-right-radius: .25rem!important;
+		border-bottom-left-radius: 0!important;
+		border-bottom-right-radius: 0!important;
 	}
 }
 
