--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -222,24 +222,42 @@ p.stars {
 /**
  * Password strength meter
  */
+
 .woocommerce-password-strength {
-	text-align: right;
+	display: block;
+	color: $color__white;
+	@include font-size(0.875);
+	margin-top: 0.5rem;
+	padding: 0.5rem;
+	text-align: center;
+	border-radius: .25rem;
+	box-shadow: inset 0 0 0 1px $color__alpha-dark;
 
 	&.strong {
-		color: $woocommerce__color-success;
+		background-color: $woocommerce__color-success;
 	}
 
 	&.short {
-		color: $woocommerce__color-error;
+		background-color: $woocommerce__color-error;
 	}
 
 	&.bad {
-		color: $woocommerce__color-error;
+		background-color: $woocommerce__color-error;
 	}
 
 	&.good {
-		color: $woocommerce__color-info;
+		background-color: $woocommerce__color-info;
 	}
+}
+
+small.woocommerce-password-hint {
+	background-color: #fff176;
+	color: #ff6f00;
+	display: block;
+	margin-top: 0.5rem;
+	padding: 1rem;
+	border-radius: 0.25rem;
+	box-shadow: inset 0 0 0 1px $color__alpha-dark;
 }
 
 /**
@@ -307,6 +325,27 @@ p.no-comments,
 	border-left-color: $woocommerce__color-error;
 }
 
+.woocommerce-notice {
+	padding: .5rem;
+	text-align: center;
+	border-radius: .25rem;
+}
+
+.woocommerce-notice--info {
+	background-color: $woocommerce__color-info;
+	color: $color__white;
+}
+
+.woocommerce-notice--success {
+	background-color: $woocommerce__color-success;
+	color: $color__white;
+}
+
+.woocommerce-notice--error {
+	background-color: $woocommerce__color-error;
+	color: $color__white;
+}
+
 .demo_store {
 	position: fixed;
 	left: 0;
@@ -321,7 +360,7 @@ p.no-comments,
 .woocommerce {
 	.blockUI.blockOverlay,
 	.loader {
-		background-color: rgba( 255,255,255,.75 )!important;
+		background-color: #fff!important;
 		&::before {
 			content: " ";
 			border: 2px solid #000;
