--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,6 +61,11 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 @import "base/modules/clearings";
 
 /*--------------------------------------------------------------
+# Preloader
+--------------------------------------------------------------*/
+@import "base/modules/preloader";
+
+/*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
 @import "components/media/media";
