--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -71,9 +71,10 @@ table.cart img {
 	border-radius: 100%;
 	color: #909090;
 	background-color: rgba(0, 0, 0, 0.1);
+	font-family: sans-serif;
 	font-size: 1rem;
 	font-weight: normal;
-	line-height: 1.25;
+	line-height: 1.5;
 	text-align: center;
 	text-decoration: none;
 }
@@ -179,6 +180,7 @@ ul.products li.product .star-rating {
 
 ul.products li.product .button {
 	display: block;
+	padding: 0.75rem 0.25rem;
 	border-color: #909090;
 	border-radius: 0.25rem;
 	color: #909090;
