--- a/sass/plugins/woocommerce/_tables.scss
+++ b/sass/plugins/woocommerce/_tables.scss
@@ -72,10 +72,11 @@ table.cart img {
 		display: inline-block;
 		font-size: 1rem;
 		font-weight: normal;
+		font-family: sans-serif;
 		height: 1.5rem;
 		width: 1.5rem;
 		text-align: center;
-		line-height: 1.25;
+		line-height: 1.5;
 		border-radius: 100%;
 		text-decoration: none;
 		border: 0;
