--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -69,8 +69,8 @@ table.cart img {
 	height: 1.5rem;
 	border: 0;
 	border-radius: 100%;
-	color: #909090;
-	background-color: rgba(0, 0, 0, 0.1);
+	color: #fff !important;
+	background-color: #505050;
 	font-family: sans-serif;
 	font-size: 1rem;
 	font-weight: normal;
@@ -81,7 +81,7 @@ table.cart img {
 
 .product-remove a:hover,
 .product-remove a:focus {
-	color: #fff;
+	color: #fff !important;
 	background-color: #e2401c;
 }
 
@@ -576,8 +576,6 @@ a.reset_variations {
 }
 
 .woocommerce-Price-amount {
-	font-size: 18px;
-	font-size: 1.125rem;
 	font-weight: 500;
 }
 
@@ -810,6 +808,10 @@ a.reset_variations {
 .wc_payment_methods li {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	background-color: #fff;
+}
+
+.wc_payment_methods li:last-child {
+	border-bottom-width: 0;
 }
 
 .wc_payment_methods .payment_box {
@@ -1602,8 +1604,8 @@ ul.cart_list a.remove {
 	height: 1.5rem;
 	border: 0;
 	border-radius: 100%;
-	color: #909090;
-	background-color: rgba(0, 0, 0, 0.1);
+	color: #fff !important;
+	background-color: #505050;
 	font-family: sans-serif;
 	font-size: 1rem;
 	font-weight: normal;
@@ -1613,7 +1615,7 @@ ul.cart_list a.remove {
 
 ul.cart_list a.remove:hover,
 ul.cart_list a.remove:focus {
-	color: #fff;
+	color: #fff !important;
 	background-color: #e2401c;
 }
 
@@ -2022,5 +2024,11 @@ input[type="submit"].woocommerce-widget-layered-nav-dropdown__submit {
 @media (min-width: 992px) {
 	.single-product div.product {
 		padding: 30px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.single-product div.product {
+		padding: 40px;
 	}
 }
