--- a/sass/plugins/woocommerce/_widgets.scss
+++ b/sass/plugins/woocommerce/_widgets.scss
@@ -106,8 +106,8 @@ ul.cart_list {
 		padding-left: 2rem!important;
 	}
 	a.remove {
-		background-color: $color__alpha-dark;
-		color: $color__text-secondary;
+		background-color: $color__text-main;
+		color: $color__white!important;
 		position: absolute;
 		font-family: sans-serif;
 		top: .25rem;
@@ -124,7 +124,7 @@ ul.cart_list {
 		&:hover,
 		&:focus {
 			background-color: $woocommerce__color-error;
-			color: #fff;
+			color: $color__white!important;
 		}
 	}
 }
