new year update

--- a/sass/base/modules/_clearings.scss
+++ b/sass/base/modules/_clearings.scss
@@ -10,6 +10,8 @@
 .comment-content:after,
 .site-header:before,
 .site-header:after,
+.main-navigation:before,
+.main-navigation:after,
 .site-content:before,
 .site-content:after,
 .site-footer:before,
@@ -47,6 +49,7 @@ ul.products:after,
 .entry-content:after,
 .comment-content:after,
 .site-header:after,
+.main-navigation:after,
 .site-content:after,
 .site-footer:after,
 .entry-inner:after,
