--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -39,3 +39,8 @@ $woocommerce__color-info: #3D9CD2;
  * WooCommerce widgets
  */
 @import "plugins/woocommerce/widgets";
+
+/**
+ * WooCommerce extra
+ */
+@import "plugins/woocommerce/extra";
