--- a/sass/components/navigation/_menus.scss
+++ b/sass/components/navigation/_menus.scss
@@ -6,13 +6,14 @@
 	z-index: 5;
 	transition: all ease-in-out .25s;
 
-	> .menu {
+	> .container {
 		background-color: $color__background-submenu;
 		clear: both;
 		display: none;
 		margin: 0;
 		padding: 0;
 		opacity: 0;
+		position: relative;
 	}
 
 	.icon-dropdown {
@@ -20,7 +21,7 @@
 	}
 
 	&.toggled {
-		> .menu {
+		> .container {
 			display: block;
 			opacity: 1;
 		}
@@ -56,7 +57,7 @@
 		opacity: 0.65;
 	}
 
-	.icon {
+	.icon-user {
 		margin-right: .5rem;
 	}
 
@@ -76,7 +77,7 @@
 		float: none;
 		clear: both;
 
-		> .menu {
+		> .container {
 			clear: none;
 			display: block;
 			background-color: transparent;
@@ -125,6 +126,7 @@
 						transform: scale(1);
 					}
 				}
+
 				&.menu-right {
 					float: right;
 					&:hover,
@@ -135,6 +137,7 @@
 						}
 					}
 				}
+
 				&.full-width-menu {
 					&:hover,
 					&.focus {
