--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -9,6 +9,11 @@
 @import "menus";
 
 /*--------------------------------------------------------------
+## Social Links
+--------------------------------------------------------------*/
+@import "social-links";
+
+/*--------------------------------------------------------------
 ## Breadcrumb
 --------------------------------------------------------------*/
 @import "breadcrumb";
