--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,9 +61,9 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 @import "base/modules/clearings";
 
 /*--------------------------------------------------------------
-# Preloader
+# Vendor
 --------------------------------------------------------------*/
-@import "base/modules/preloader";
+@import "vendor/preloader";
 
 /*--------------------------------------------------------------
 # Media
