--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -75,7 +75,10 @@ ul.products {
 			position: absolute;
 			top: 15px;
 			right: 15px;
-			text-shadow: 0 1px 0 rgba( 0,0,0,.75 );
+		}
+
+		.onsale {
+			left: -15px;
 		}
 
 		.button {
@@ -114,6 +117,10 @@ ul.products {
 		border: 1px solid $color__alpha-dark;
 		box-shadow: none;
 	}
+}
+
+.baltic-product-thumbnail-wrap {
+	position: relative;
 }
 
 .baltic-product-thumbnail {
